Refactor AbstractS3Service to use Java 11+ HttpClient for image downloads; update AsyncConfig for virtual thread support; simplify EmailService by removing custom executor management